add card fortnite

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 
                     <ul class="games-list">
                         <li>
-                            <a href="#">
+                            <a 
+                                href="#"
+                                target="_blank"
+                            >
                                 <img
                                     target="_blank" 
                                     src="https://static-cdn.jtvnw.net/ttv-boxart/21779-188x250.jpg" 
@@ -38,7 +41,10 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a 
+                                href="#"
+                                target="_blank"
+                            >
                                 <img
                                     target="_blank" 
                                     src="https://static-cdn.jtvnw.net/ttv-boxart/516575-188x250.jpg" 
@@ -47,11 +53,26 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a 
+                                href="#"
+                                target="_blank"
+                            >
                                 <img
                                     target="_blank" 
                                     src="https://static-cdn.jtvnw.net/ttv-boxart/513143-188x250.jpg" 
                                     alt="Imagem do jogo Teamfight Tactics"
+                                >
+                            </a>
+                        </li>
+                        <li>
+                            <a 
+                                href="#"
+                                target="_blank"
+                            >
+                                <img
+                                    target="_blank" 
+                                    src="https://static-cdn.jtvnw.net/ttv-boxart/33214-285x380.jpg" 
+                                    alt="Imagem do jogo Fortnite"
                                 >
                             </a>
                         </li>
